# faim-jetraw-playground

./: .gitignore  README.md  pyproject.toml
.github/: hatch.toml
.github/workflows/: check-license-headers.yml  test.yml
data/: SN61010244_DarkRef_bin4_274MHz_withNoiseFilter.tif  SN61010245_DarkRef_bin4_274MHz_withNoiseFilter.tif
src/faim_jetraw/: io.py
tests/: test_compression.py
