[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faim-jetraw"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Jan Eglinger", email = "jan.eglinger@fmi.ch" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy", # required by jetraw
  "tifffile",
  "jetraw @ https://github.com/Jetraw/pyJetraw/releases/download/21.06.23.2/JetRaw-0.9.1-py3-none-any.whl",
  "dpcore @ https://github.com/Jetraw/pyDpcore/releases/download/21.06.23.1/DPCore-0.9.0-py3-none-any.whl"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/fmi-basel/faim-jetraw#readme"
Issues = "https://github.com/fmi-basel/faim-jetraw/issues"
Source = "https://github.com/fmi-basel/faim-jetraw"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/faim_jetraw/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.env-vars]
LD_LIBRARY_PATH = "/home/runner/work/faim-jetraw-playground/faim-jetraw-playground/jetraw/lib/"

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/faim_jetraw --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/faim_jetraw/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
